--- a/src/Styled/Slider.css
+++ b/src/Styled/Slider.css
@@ -6,6 +6,16 @@
     margin-top: 2%;
   }
   
+  .slide h2{
+    display: flex;
+    justify-content: center;
+    color: grey;
+  }
+  .slide p{
+    display: flex;
+    justify-content: center;
+    font-size: 1em;
+  }
   .slide {
     position: relative;
     width: 100%;
@@ -15,7 +25,7 @@
   
   .slide img {
     width: 100%; /* Ensure images take up full width of container */
-    height: auto; /* Maintain aspect ratio */
+    height: 300px; /* Maintain aspect ratio */
   }
   
   .fade-out {
