--- a/src/Styled/ContactUs.css
+++ b/src/Styled/ContactUs.css
@@ -1,64 +1,77 @@
 /* ContactUs.css */
 
 .contact-container {
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-    text-align: center;
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+  text-align: center;
+  position: relative;
+}
+
+.contact-bg {
+  position: absolute;
+  top: 0;
+  left: -9px;
+  width: 100%;
+  height: 100%;
+  background-image: url('../assets/contectus.png');
+  background-size: cover;
+  background-position: center;
+  opacity: 0.1;
+  z-index: 0;
+}
+
+.contact-title {
+  margin-bottom: 20px;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+form {
+  display: grid;
+  gap: 15px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  cursor: pointer;
+}
+
+/* Animation */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
-  .contact-title {
-    margin-bottom: 20px;
+  to {
+    opacity: 1;
   }
-  
-  .contact-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  form {
-    display: grid;
-    gap: 15px;
-  }
-  
+}
+
+.contact-container,
+.contact-form,
+.contact-message {
+  animation: fadeIn 1s ease-in-out;
+}
+
+/* Responsiveness */
+@media (max-width: 600px) {
   input,
   textarea {
     width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
   }
-  
-  input[type="submit"] {
-    background-color: #4caf50;
-    color: white;
-    cursor: pointer;
-  }
-  
-  /* Animation */
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  
-  .contact-container,
-  .contact-form,
-  .contact-message {
-    animation: fadeIn 1s ease-in-out;
-  }
-  
-  /* Responsiveness */
-  @media (max-width: 600px) {
-    input,
-    textarea {
-      width: 100%;
-    }
-  }
-  
+}
