--- a/src/Styled/Product.css
+++ b/src/Styled/Product.css
@@ -15,13 +15,18 @@
   .it-services {
     padding: 50px 0;
     text-align: center;
+    background-image: url(../assets/ProductBackG.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
   }
   
+  .container1 h2{
+    color: black !important;
+  }
   .container1 {
     max-width: 1200px;
     margin: 0 auto;
   }
-  
   .services-list1 {
     display: flex;
     flex-wrap: wrap;
@@ -33,7 +38,7 @@
     width: 400px;
     margin: 20px;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: rgb(34, 33, 33);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     animation: fadeIn 0.5s ease-in-out; /* Apply animation */
@@ -46,6 +51,11 @@
   
   .service-info1 {
     padding: 20px 0;
+    color: white;
+  }
+
+  .service-info1 p{
+    color: white;
   }
   
   @media screen and (max-width: 768px) {
